--- a/templates/results.html
+++ b/templates/results.html
@@ -7,7 +7,7 @@
 </div>
 {% else %}
 <br>
-<h1>
+<h1 class="text-success">
     {% block title%} Advancing Teams {% endblock %}
 </h1>
 <table class="table table-striped table-hover">
