--- a/templates/results.html
+++ b/templates/results.html
@@ -9,25 +9,59 @@
 <br>
 <h1 class="text-success">
     {% block title%} Advancing Teams {% endblock %}
-</h1>
-<table class="table table-striped table-hover">
+</h1> <span>Teams that are in green will advance to the next round!</span>
+
+<h3 class="pt-3">Group 1</h3>
+<table class="table table-hover">
     <thead class="bg-dark text-white">
         <tr>
+            <th scope="col">Ranking</th>
             <th scope="col">Team</th>
-            <th scope="col">Group Number</th>
             <th scope="col">Points</th>
             <th scope="col">Alternate Points</th>
             <th scope="col">Goals</th>
         </tr>
     </thead>
     <tbody>
-        {% for result in results %}
+        {% for i in range(0, results1|length) %}
+        {% if i < 4 %}
+        <tr class="text-success">
+        {% else %}
+        <tr class="text-danger">
+        {% endif %}
+            <td>{{results1[i]['ranking']}}</td>
+            <th scope="row">{{results1[i]['team_name']}}</th>
+            <td>{{results1[i]['points']}}</td>
+            <td>{{results1[i]['alt_points']}}</td>
+            <td>{{results1[i]['goals']}}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<h3>Group 2</h3>
+<table class="table table-hover">
+    <thead class="bg-dark text-white">
         <tr>
-            <th scope="row">{{result['team_name']}}</th>
-            <td>{{result['group_num']}}</td>
-            <td>{{result['points']}}</td>
-            <td>{{result['alt_points']}}</td>
-            <td>{{result['goals']}}</td>
+            <th scope="col">Ranking</th>
+            <th scope="col">Team</th>
+            <th scope="col">Points</th>
+            <th scope="col">Alternate Points</th>
+            <th scope="col">Goals</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for i in range(0, results2|length) %}
+        {% if i < 4 %}
+        <tr class="text-success">
+        {% else %}
+        <tr class="text-danger">
+        {% endif %}
+            <td scope="row">{{results2[i]['ranking']}}</td>
+            <th scope="row">{{results2[i]['team_name']}}</th>
+            <td>{{results2[i]['points']}}</td>
+            <td>{{results2[i]['alt_points']}}</td>
+            <td>{{results2[i]['goals']}}</td>
         </tr>
         {% endfor %}
     </tbody>
